<resources>
    <string name="app_name">Partyspottr</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="vilkaarogpersonvern">By pressing Register, you accept our <a href="">Terms of service</a> and our <a href="">Privacy Policy</a>.</string>
    <string name="brukernavn">Username</string>
    <string name="passord">Password</string>
    <string name="logg_inn">Login</string>
    <string name="registrer_deg">Register</string>
    <string name="hva_heter_du">What\'s your name?</string>
    <string name="fornavn">First name</string>
    <string name="etternavn">Last name</string>
    <string name="fødselsdagen_din">What\'s your date of birth?</string>
    <string name="åååå">yyyy</string>
    <string name="fortsett">Continue</string>
    <string name="velg_brukernavn">Please choose a username</string>
    <string name="velg_passord">Type your password</string>
    <string name="epostadressen_din">What\'s your e-mail address?</string>
    <string name="e_postadresse">E-mail address</string>
    <string name="mobilnummeret_ditt">What\'s your phone number?</string>
    <string name="ferdig">Finish</string>
    <string name="mobilnr">Phone number</string>
    <string name="logger_inn">Logging in..</string>
    <string name="sjekker_brukernavn">Checking username..</string>
    <string name="brukernavn_opptatt">This username is already taken.</string>
    <string name="ingen_kontakt_server">We can\'t connect to the server, make sure you have Wi-Fi or cellular network enabled.</string>
    <string name="vennligst_6_minimum_passord">Please use a password 7 letters/numbers or longer.</string>
    <string name="draweråpnet">Opened</string>
    <string name="drawerlukket">Closed</string>
    <string name="logg_ut_melding">Do you want to log out?</string>
    <string name="logg_ut">Log out</string>
    <string name="nei">No</string>
    <string name="ja">Yes</string>
    <string name="sjåfør">Chauffeur</string>
    <string name="arrangementer">Events</string>
    <string name="allerede_laget_konto">You have already registered.</string>
    <string name="registrering">Registration</string>
    <string name="bekreft">Confirm</string>
    <string name="navn">Name</string>
    <string name="fødselsdato">Date of birth</string>
    <string name="endre">Change</string>
    <string name="velkommen_admin">Welcome Admin!</string>
    <string name="feil_passord">Wrong password, or you have not registered yet.</string>
    <string name="tilkoblingsfeil">Connection failed.</string>
    <string name="registrerer_bruker">Registrating user..</string>
    <string name="bruker_finnes_allerede">This account already exists.</string>
    <string name="velkommen">Welcome</string>
    <string name="ukjent_feil">Unknown error occurred!</string>
    <string name="hente_bruker_mislykkes">Failed to retrieve your account data.</string>
    <string name="logg_ut_mislykkes">Failed to logout.</string>
    <string name="hente_event_mislyktes">Failed to retrieve events.</string>
    <string name="legge_til_event_mislyktes">Failed to add event.</string>
    <string name="event_lagt_til">Successfully added event.</string>
    <string name="legger_til_event">Adding event..</string>
    <string name="ikke_definert">Undefined</string>
    <string name="opprett_event">Create event</string>
    <string name="tom_eventliste">There are no events active.</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="avbryt">Cancel</string>
    <string name="angi">Set</string>
    <string name="til">to</string>
    <string name="gjesteliste">Guestlist</string>
    <string name="profil">Profile</string>
    <string name="title_activity_setting" translatable="false">SettingActivity</string>

    <string name="facebook_app_id" translatable="false">176818486443991</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb176818486443991</string>
    <string name="no_recent_chats">You have no recent chats.</string>
    <string name="i_går">Yesterday</string>
    <string name="requesting">Requesting..</string>
    <string name="requested_to_join">Requested to join!</string>
    <string name="failed_to_request_to_join">Failed to send request!</string>
    <string name="sjekker_email">Checking email..</string>
    <string name="updated_event">Updated event.</string>
    <string name="failed_to_update">Failed to update event.</string>
    <string name="email_already_in_use">This email is already in use!</string>
    <string name="could_not_find_chats">Could not find chats.</string>
    <string name="please_allow">Please allow Partyspottr to find your location.</string>
    <string name="try_again_later">Please try again later..</string>
    <string name="town">Town</string>
    <string name="logging_out">Logging out..</string>
    <string name="failed_logout">Failed to logout.</string>
    <string name="you_dont_have_events">You don\'t have any events!</string>
    <string name="register_car">Register car</string>
    <string name="failed_registrating_car">Failed to registrate new car.</string>
    <string name="my_car">My car</string>
    <string name="start_new_time">Start new session</string>
    <string name="your_session">Your session</string>
    <string name="drikkeleker">Drinking games</string>
    <string name="upgrade_to_premium">Upgrade to premium</string>
    <string name="innstillinger">Settings</string>
    <string name="help">Help</string>
    <string name="my_profile">My profile</string>
    <string name="my_cars">My cars</string>
    <string name="varsler">Notifications</string>
    <string name="language">Language</string>
    <string name="delete_account">Delete account</string>
    <string name="my_chats">My chats</string>
    <string name="friends">Friends</string>
    <string name="all_events">All events</string>
    <string name="my_events">My events</string>
    <string name="my_archive">My archive</string>
    <string name="passasjer">Passenger</string>
    <string name="spots">Spots</string>
    <string name="send_request">Send request</string>
    <string name="zero_out_of_zero_going">%d out of %d is going</string>
    <string name="join_event">Join event</string>
    <string name="agerestriction">Age limit: %d</string>
    <string name="host_deg">Host: %s (you)</string>
    <string name="host">Host: %s</string>
    <string name="setup_car">Setup your car</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="add_car">Add car</string>
    <string name="end_session">End session</string>

</resources>