<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.partyspottr.appdir.ui.registerui.Register2Activity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/epostadressen_din"
        android:textAlignment="center"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobil_nr_text" />

    <Button
        android:id="@+id/button5"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="@dimen/_135sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_345sdp"
        android:background="@drawable/rounded_btn_rect"
        android:onClick="onClickFortsettBtn"
        android:text="@string/fortsett"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mobil_nr_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:ems="10"
        android:hint="@string/mobilnr"
        android:inputType="phone|number"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/spinnerPrefix"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:ems="10"
        android:hint="@string/e_postadresse"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:clickable="false"
        android:max="5"
        android:progress="2"
        android:thumbOffset="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_95sdp"
        android:text="@string/mobilnummeret_ditt"
        android:textAlignment="center"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/registrering"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="14dp" />

    </android.support.v7.widget.Toolbar>

    <Spinner
        android:id="@+id/spinnerPrefix"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/mobil_nr_text"
        app:layout_constraintEnd_toStartOf="@+id/mobil_nr_text"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/mobil_nr_text" />

</android.support.constraint.ConstraintLayout>
