<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.partyspottr.appdir.ui.registerui.RegisterActivity">

    <EditText
        android:id="@+id/fornavnText"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_33sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWZYXÆØÅabcdefghijklmnopqrstuvwxyzæøå"
        android:ems="10"
        android:hint="@string/fornavn"
        android:inputType="text|textCapWords"
        android:paddingStart="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintEnd_toStartOf="@+id/etternavnText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etternavnText"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_33sdp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZÆØÅabcdefghijklmnopqrstuvwxyzæøå"
        android:ems="10"
        android:hint="@string/etternavn"
        android:inputType="text|textCapWords"
        android:paddingStart="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fornavnText"
        app:layout_constraintTop_toTopOf="@+id/fornavnText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/hva_heter_du"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/_135sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_270sdp"
        android:background="@drawable/border_rounded"
        android:onClick="onClickRegistrerBtn"
        android:text="@string/fortsett"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:clickable="false"
        android:max="5"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tickMarkTint="@android:color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/fødselsdagen_din"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etternavnText" />

    <EditText
        android:id="@+id/mmNum"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        android:digits="1234567890"
        android:ems="10"
        android:hint="mm"
        android:inputType="number"
        android:maxLength="2"
        android:theme="@style/MyEditTextTheme"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/ååååNum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ddNum"
        app:layout_constraintTop_toTopOf="@+id/ddNum" />

    <EditText
        android:id="@+id/ååååNum"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/åååå"
        android:inputType="number"
        android:theme="@style/MyEditTextTheme"
        android:maxLength="4"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mmNum"
        app:layout_constraintTop_toTopOf="@+id/mmNum" />

    <EditText
        android:id="@+id/ddNum"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="dd"
        android:inputType="number"
        android:maxLength="2"
        android:theme="@style/MyEditTextTheme"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/mmNum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/border_bottom_fat"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/registrering"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="14dp" />

    </android.support.v7.widget.Toolbar>


</android.support.constraint.ConstraintLayout>
